dist/1.0/bin/sample/retrieveUnpackaged/objects/Account_Revenue__c.object
<CustomObject>
    <description>Information about customer account revenue</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Related Account</description>
        <inlineHelpText>Related Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Revenue</relationshipLabel>
        <relationshipName>R00N20000001RfazEAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Related Bundle</description>
        <inlineHelpText>Related Bundle</inlineHelpText>
        <label>Product (custom)</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Account Revenues</relationshipLabel>
        <relationshipName>Account_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Last timestamp from migration or integration</description>
        <inlineHelpText>Last timestamp from migration or integration</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month for revenue</description>
        <inlineHelpText>Month for revenue</inlineHelpText>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Product Family</description>
        <inlineHelpText>Product Family</inlineHelpText>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Related Product (custom)</description>
        <inlineHelpText>Related Product (custom)</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Revenues</relationshipLabel>
        <relationshipName>R00N20000001SYWXEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Revenue for year, month and product LOB</description>
        <inlineHelpText>Revenue for year, month and product LOB</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SourceRecordID__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year for revenue</description>
        <inlineHelpText>Year for revenue</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_and_Month__c</fullName>
        <description>Year and Month for Account Revenue</description>
        <formula>IF( Month__c &lt; 10, TEXT( Year__c ) + &quot; - 0&quot; + TEXT( Month__c ), TEXT( Year__c ) + &quot; - &quot; + TEXT( Month__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Year and Month for Account Revenue</inlineHelpText>
        <label>Year and Month</label>
        <type>Text</type>
    </fields>
    <label>Account Revenue</label>
    <nameField>
        <displayFormat>ACR{000000000}</displayFormat>
        <label>Account Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>